--- a/appsscript.json
+++ b/appsscript.json
@@ -1,15 +1,24 @@
 {
   "timeZone": "America/Santiago",
-  "dependencies": {
-  },
+  "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/script.container.ui",
+    "https://www.googleapis.com/auth/spreadsheets",
+    "https://www.googleapis.com/auth/drive",
+    "https://www.googleapis.com/auth/script.external_request"
+  ],
+  "runtimeVersion": "V8",
   "sheets": {
-    "macros": [{
-      "menuName": "PegarDatosForm1",
-      "functionName": "PegarDatosForm2"
-    }, {
-      "menuName": "PegarDatosForm01",
-      "functionName": "PegarDatosForm01"
-    }]
+    "macros": [
+      {
+        "menuName": "PegarDatosForm1",
+        "functionName": "PegarDatosForm2"
+      },
+      {
+        "menuName": "PegarDatosForm01",
+        "functionName": "PegarDatosForm01"
+      }
+    ]
   }
 }
